--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "bootstrap": "^4.3.1",
     "bootstrap-vue": "^2.0.0-rc.18",
     "gridsome": "^0.5.0",
+    "gridsome-plugin-netlify-cms": "^1.0.6",
+    "netlify-cms": "^2.9.1",
     "node-sass": "^4.11.0",
     "sass-loader": "^7.1.0"
   },
