Changed netlify media_folder to /uploads

--- a/src/admin/config.yml
+++ b/src/admin/config.yml
@@ -2,7 +2,7 @@ backend:
   name: github
   repo: chpmnrssll/gridsome-boilerplate
 
-media_folder: "static/uploads"
+media_folder: "/uploads"
 public_folder: "/uploads"
 
 collections:
