--- a/package.json
+++ b/package.json
@@ -16,11 +16,14 @@
     "gridsome": "^0.5.0",
     "gridsome-plugin-netlify-cms": "^1.0.6",
     "netlify-cms": "^2.9.1",
+    "netlify-identity-widget": "^1.5.2",
     "node-sass": "^4.11.0",
-    "sass-loader": "^7.1.0"
+    "sass-loader": "^7.1.0",
+    "vuex": "^3.1.1"
   },
   "devDependencies": {
     "eslint": "^5.16.0",
+    "eslint-config-airbnb-vue": "^2.0.1",
     "eslint-plugin-gridsome": "^1.2.5",
     "vue-eslint-parser": "^6.0.4"
   }
