--- a/src/admin/config.yml
+++ b/src/admin/config.yml
@@ -1,6 +1,7 @@
 backend:
-  name: github
+  name: git-gateway
   repo: chpmnrssll/gridsome-boilerplate
+  squash_merges: true
 
 media_folder: "/uploads"
 public_folder: "/uploads"
