--- a/package.json
+++ b/package.json
@@ -15,11 +15,19 @@
     "bootstrap-vue": "^2.0.0-rc.18",
     "gridsome": "^0.5.0",
     "gridsome-plugin-netlify-cms": "^1.0.6",
+    "immutable": "^4.0.0-rc.12",
+    "jquery": "^3.4.1",
+    "lodash": "^4.17.11",
     "netlify-cms": "^2.9.1",
+    "netlify-cms-lib-util": "^2.3.2",
     "netlify-identity-widget": "^1.5.2",
     "node-sass": "^4.11.0",
+    "popper": "^1.0.1",
     "sass-loader": "^7.1.0",
-    "vuex": "^3.1.1"
+    "slate-schema-violations": "^0.1.39",
+    "vue": "^2.6.10",
+    "vuex": "^3.1.1",
+    "webpack": "^4.31.0"
   },
   "devDependencies": {
     "eslint": "^5.16.0",
