--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "bootstrap-vue": "^2.0.0-rc.18",
     "gridsome": "^0.5.0",
     "gridsome-plugin-netlify-cms": "^1.0.6",
+    "gridsome-plugin-purgecss": "^1.0.12",
     "immutable": "^4.0.0-rc.12",
     "jquery": "^3.4.1",
     "lodash": "^4.17.11",
