--- a/netlify.toml
+++ b/netlify.toml
@@ -1,9 +1,9 @@
 [build]
   functions = "functions"
   # This will be run the site build
-  command = "npm run build"
+  command = "gridsome build"
   # This is the directory is publishing to netlify's CDN
-  publish = "build"
+  publish = "dist"
 
 [template.environment]
   # FAUNADB_SERVER_SECRET = "Your FaunaDB Server Secret"
