--- a/functions/graphql-api/package.json
+++ b/functions/graphql-api/package.json
@@ -19,6 +19,7 @@
     "apollo-link-context": "^1.0.17",
     "apollo-link-http": "^1.5.14",
     "apollo-server-lambda": "^2.4.8",
+    "encoding": "^0.1.12",
     "graphql": "^14.1.1",
     "graphql-tools": "^4.0.4",
     "node-fetch": "^2.3.0"
