--- a/netlify.toml
+++ b/netlify.toml
@@ -1,7 +1,7 @@
 [build]
   functions = "functions"
   # This will be run the site build
-  command = "gridsome build"
+  command = "yarn build"
   # This is the directory is publishing to netlify's CDN
   publish = "dist"
 
