--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,5 @@
 [build]
-  functions = "functions"
+  # functions = "functions"
   # This will be run the site build
   command = "yarn build"
   # This is the directory is publishing to netlify's CDN
