--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "gridsome-boilerplate",
   "private": true,
   "scripts": {
-    "build": "netlify dev:exec functions/fauna-crud/create-schema.js && gridsome build",
+    "build": "gridsome build",
     "dev": "gridsome develop",
     "explore": "gridsome explore"
   },
