--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "bootstrap-vue": "^2.0.0-rc.18",
     "chalk": "^2.4.2",
     "faunadb": "^2.6.1",
-    "gridsome": "^0.5.0",
+    "gridsome": "^0.6.7",
     "gridsome-plugin-netlify-cms": "^1.0.6",
+    "gridsome-plugin-netlify-cms-paths": "^0.3.0",
     "gridsome-plugin-purgecss": "^1.0.12",
+    "gridsome-transformer-netlify": "^1.0.3",
     "immutable": "^4.0.0-rc.12",
     "jquery": "^3.4.1",
     "lodash": "^4.17.11",
